--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- {% load static %} -->
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -55,7 +57,7 @@
       </div>
     </div>
   </section>
-
+ 
   <!-- Contact -->
   <section id="contact" class="py-5 bg-light">
     <div class="container">
