--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -68,28 +68,7 @@
   </section>
 
   <!-- Products -->
-  <!-- <section id="products" class="py-5">
-    <div class="container text-center">
-      <h2 class="mb-4">Our Products</h2>
-      <div class="row">
-        {% for i in "123" %}
-        <div class="col-md-4 mb-4">
-          <div class="card">
-            <img src="{% static 'products/images/slider1.jpg' %}" class="card-img-top" alt="Product">
-            <div class="card-body">
-              <h5 class="card-title">Product {{ i }}</h5>
-              <p class="card-text">$100</p>
-              <a href="#" class="btn btn-primary">Buy Now</a>
-            </div>
-          </div>
-        </div>
-        {% endfor %}
-      </div>
-    </div>
-  </section> -->
-
-  <!-- Products -->
-    <section id="products" class="py-5">
+    <!-- <section id="products" class="py-5">
     <div class="container text-center">
       <h2 class="mb-4">Our Products</h2>
       <div class="row">
@@ -104,14 +83,37 @@
             <div class="card-body">
               <h5 class="card-title">Product {{ product.name }}</h5>
               <p class="card-text">${{ product.price}}</p>
-              <a href="#" class="btn btn-primary">Buy Now</a>
+              <a href="#" class="btn btn-primary">Detail</a>
             </div>
           </div>
         </div>
         {% endfor %}
       </div>
     </div>
-  </section>
+  </section> -->
+
+  <!-- Products -->
+<section id="products" class="py-5">
+  <div class="container text-center">
+    <h2 class="mb-4">Our Products</h2>
+    <div class="row">
+      {% for product in products %}
+      <div class="col-md-4 mb-4">
+        <a href="{% url 'product_detail' product.id %}" class="text-decoration-none text-dark">
+          <div class="card product-card shadow-sm h-100">
+            <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
+            <div class="card-body">
+              <h5 class="card-title">{{ product.name }}</h5>
+              <p class="card-text">${{ product.price }}</p>
+              <a href="{% url 'product_detail' product.id %}" class="btn btn-primary">View Details</a>
+            </div>
+          </div>
+        </a>
+      </div>
+      {% endfor %}
+    </div>
+  </div>
+</section>
 
   <!-- Customer Reviews -->
   <section id="reviews" class="py-5 bg-light">
